fdo#52610: Fixed several docx export bugs

+ hyperlink starting before a field and ending in its results isn't
   valid.
 + when footnotes have hyperlinks we need to add the proper XML
   namespace and output the relations to a different file.

Change-Id: I1c6cb8acba21c35e10bb0497eeaf96bbd73730d1